public/css/funky_world_cup.css
/* ... */
.mobile-result {
  display: none;
}

.lang-flag-left {
  padding-right: 15px !important;
}

.lang-flag-right {
  padding-left: 0px !important;
  padding-right: 25px !important;
}

#admin-dashboard-counts {}
  #admin-dashboard-counts .panel-body {
    font-size: 3em;
    text-align: center;
  }


/* responsive */
@media (max-width: 479px) {
  #nickname {
    display: none;
  }
  #main-navbar {
    display: none;
  }
  .small-mobile {
    display: list-item;
  }
  #wc-logo {
    display: none; 
  }
  #login {
    text-align: center;
  }
  #login h3 {
    margin-top: 10px; 
  }
  .social-link {
    display: inline-block;
  }

  .panel-body {
    padding: 5px 0;
  }

  .panel-body h4, .panel-body h3 {
    padding-left: 10px;
  }

  footer #extra-footer p {
    display: none; 
  }

  .mobile-result {
    display: block;
  }

  .matches-table {
    margin.left:1px;
  }
  .matches-table .info-column {
    display: none;
  }
  .matches-table .prediction-column {
    display: none;
  }
  .matches-table td img {
    max-width: 35px;
  }
  .matches-table .team-column {
    font-size: 0.7em;
    padding: 5px 0;
  }
  .matches-table td .host-result, .matches-table td .rival-result {
    display: none;
  }
  .matches-table td.result {
    padding-top: 20px;
  }

  .matches-table tr.mobile-info {
    display: table-row;
  }
    .matches-table tr.mobile-info td {
      text-align: center;
    }

  .matches-table.small-table td.team-column {
    width: 90px;
  }
  .matches-table.small-table .info-column {
    display: table-cell;
  }

  #modal-predict form td.modal-host, #modal-predict form td.modal-rival {
    padding-top: 6px;
  }
  #modal-predict form td.modal-host img, #modal-predict form td.modal-rival img{
    max-width: 45px;
  }
  #modal-predict form td .team {
    display: none;
  }

  #group-participants-list.by-owner {
    width: 80%;
  }

  .position-table th, .position-table td {
    font-size: 0.7em;
    font-weight: normal;
  }
  .position-table .team-name {
    display: none;
  }
  .position-table .team-column {
    width: 25px;
  }
  .position-table .team-column img {
    width: 25px;
  }
  .position-table .position-column {
    font-size: 60%;
  }
  .nav > li {
    display: inline-block;
  }
  .lang-flag-right {
    padding-right: 10px !important;
  }
  .lang-flag-left {
    padding-left: 0 !important;
    padding-right: 10px !important;
  }
  #group-controls {
    margin-top: 5px;
    margin-bottom: 15px;
    float: left !important;
  }
}

@media (min-width: 480px) and (max-width: 991px) {
  #wc-logo {
    width: 60px; 
    float: left;
  }
  #login {
    float: left;
    padding-left: 40px;
    text-align: center;
    max-width: 78%;
  }
  .social-link {
    display: inline-block;
  }
  #login h3 {
    margin-top: 5px;
  }
  .navbar-header {
    float: left;
  }
  .navbar-collapse {
    display: block;
  }
  .navbar-right {
    float: right !important;
    margin: 0 10px 0 0;
  }
  #nickname {
    display: none;
  }
  #main-navbar {
    display: none;
  }
  .user-menu {
    display: none;
  }
  .small-mobile {
    display: list-item;
  }
  .matches-table td .host-result, .matches-table td .rival-result {
    display: none;
  }
  .matches-table td.result {
    padding-top: 20px;
  }
  .mobile-result {
    display: block;
  }
  .matches-table .info-column {
    display: none;
  }
  .matches-table.small-table .info-column {
    display: table-cell;
  }

  .matches-table.small-table td.team-column {
    width: 90px;
  }

  .nav > li {
    display: inline-block;
  }
}
/* ... */

